--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="quiz-container">
         <div id="quiz">
             <h1>European Flag Quiz</h1>
-            <p id="question">To which country does this flag belong?</p>
+            <p id="question">Which country?</p>
             <p id="progress">Question x '/' y '\n' showScore()</p>
             <div class="flag-container">
               <img id="flag">
@@ -21,6 +21,7 @@
                 <button id="btn3"><span id="choice3"></span></button>
             </div>
         </div>
+        <p style="color:black;font-size:10px">Flags are based on wikipedia's definition of european countries -> <a href="https://en.wikipedia.org/wiki/Flags_of_Europe" target="_blank">here</a></p>
     </div>
 <script src="js/quiz-ctrl.js"></script>
 <script src="js/question.js"></script>
