--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
                 <button id="btn3"><span id="choice3"></span></button>
             </div>
         </div>
-        <p style="color:black;font-size:10px">Flags are based on wikipedia's definition of european countries -> <a href="https://en.wikipedia.org/wiki/Flags_of_Europe" target="_blank">here</a></p>
+        <p id="source">Flags are based on wikipedia's definition of european countries -> <a href="https://en.wikipedia.org/wiki/Flags_of_Europe" target="_blank">here</a></p>
     </div>
 <script src="js/quiz-ctrl.js"></script>
 <script src="js/question.js"></script>
