--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
               <img id="flag">
             </div>
             <div class="buttons">
-                <button id="btn0"><span id="choice0"></span></button>
-                <button id="btn1"><span id="choice1"></span></button>
-                <button id="btn2"><span id="choice2"></span></button>
-                <button id="btn3"><span id="choice3"></span></button>
+                <button id="button0"><span id="choice0"></span></button>
+                <button id="button1"><span id="choice1"></span></button>
+                <button id="button2"><span id="choice2"></span></button>
+                <button id="button3"><span id="choice3"></span></button>
             </div>
         </div>
         <p id="source">Flags are based on wikipedia's definition of european countries -> <a href="https://en.wikipedia.org/wiki/Flags_of_Europe" target="_blank">here</a></p>
