--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body id="showAnswer">
-    <div class="quiz-container">
+    <div id="landingPage">
+        <h1>European Flag Quiz</h1>
+    </div>
+    <div class="quiz-container" id="start-quiz">
         <div id="quiz">
             <h1>European Flag Quiz</h1>
             <p id="question">Which country?</p>
-            <p id="progress">Question x '/' y '\n' showScore()</p>
+            <p id="progress"></p>
             <div class="flag-container">
               <img id="flag">
             </div>
